@@ -1,3 +1,8 @@
+2002-08-29	Jakub Skopal	<j@kubs.cz>
+
+ * removed dependency on inet_ntop
+ * fixed Solaris 7 build
+
 2002-08-28	Jakub Skopal	<j@kubs.cz>
 
  * fixed Solaris build
